ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: rma
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: rma.tillpistiak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-internal-service
                port:
                  number: 3000
    - host: rma-backend.tillpistiak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-internal-service
                port:
                  number: 8080
  tls:
    - hosts:
        - rma.tillpistiak.com
        - rma-backend.tillpistiak.com
      secretName: tls-secret
  ingressClassName: nginx
